--- a/src/index.html
+++ b/src/index.html
@@ -89,10 +89,10 @@
                 </div>
                 <div class="profile__info">
                     <div class="profile__top">
-                        <h1 class="profile__name">Жак-Ив Кусто</h1>
+                        <h1 class="profile__name"></h1>
                         <button type="button" class="profile__edit-button"></button>
                     </div>
-                    <p class="profile__description">Исследователь океана</p>
+                    <p class="profile__description"></p>
                 </div>
             </div>
             <button type="button" class="profile__add-button">
